--- a/website/narrator.css
+++ b/website/narrator.css
@@ -98,7 +98,7 @@
   font-style: normal;
   font-size: 0.95rem;
   line-height: 1.8;
-  color: var(--text-bright);
+  color: var(--text);
 }
 .narration-time {
   font-size: 0.65rem;
